--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,40 @@
-# Compiled class file
-*.class
+<html>
 
-# Log file
-*.log
 
-# BlueJ files
-*.ctxt
+<h1><font size="7"><b>helle everyone tis essay is of how I spent my summer vacation </b></font></h1>
+<font size="5">
+<p1> My favourite season is summer season. I ate mango and drank mango juice. I played cricket with my friends. I viseted many place like akalkot pandharpur. and jejuri in my summer vaccation
+<p1>
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+<p2>I went to zoo and saw many animals. and went grandma's house. I played with my brother in my house. I went to restaurant with my family. 
+<p2>
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+<p3>
+I wanted to go in school. I enjoy my summer vaccation very much. 
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+
+
+<p3>
+
+<font>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<html>
