--- a/.gitignore
+++ b/.gitignore
@@ -1,40 +1,22 @@
 <html>
 
 
-<h1><font size="7"><b>helle everyone tis essay is of how I spent my summer vacation </b></font></h1>
+<h1><font size="7"><b>helle everyone this essay is of how I spent my summer vacation </b></font></h1>
 <font size="5">
-<p1> My favourite season is summer season. I ate mango and drank mango juice. I played cricket with my friends. I viseted many place like akalkot pandharpur. and jejuri in my summer vaccation
-<p1>
+<p> My favourite season is summer season. I ate mango and drank mango juice. I played cricket with my friends. I viseted many place like akalkot pandharpur. and jejuri in my summer vaccation
+</p>
 
-<p2>I went to zoo and saw many animals. and went grandma's house. I played with my brother in my house. I went to restaurant with my family. 
-<p2>
+<p>I went to zoo and saw many animals. and went grandma's house. I played with my brother in my house. I went to restaurant with my family. 
+</p>
 
-<p3>
+<p>
 I wanted to go in school. I enjoy my summer vaccation very much. 
 
 
 
-<p3>
+</p>
 
 <font>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 <html>
