--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 <html>
 
 
-<h1><font size="7"><b>helle everyone this essay is of how I spent my summer vacation </b></font></h1>
+<h1><font size="7"><b>hello everyone this essay is of how I spent my summer vacation </b></font></h1>
 <font size="5">
 <p> My favourite season is summer season. I ate mango and drank mango juice. I played cricket with my friends. I viseted many place like akalkot pandharpur. and jejuri in my summer vaccation
 </p>
